   - finally fixed g++-3.4 compile error (Debian bug #271288)
 * Robert Sowada:
   - Bugfix: User can no longer make config file invalid by using XML 
     sensitive characters in strings
   - Bugfixes in setting file permissions
   - File permissions are only set when creating a new config file. So the user
     is able to change to less restrictive permissions if he/she wants to do
     this
   - Bugfix in detection of animation information
   - Bugfixes in detection of local mailbox format
   - Bugfix in mh protocol
   - Bugfix in handling of sound filename


Version 2.0.1
 * Small bug that prevented gnbuiff to be compiled in GNOME mode


Version 2.0.0
 * gnubiff now officially part of the GNU project
 * Complete redesign of interface inspired by MailNotification
   by Jean-Yves Lefort.
 * Automatic detection of mailbox format
 * New option to tell gnbuiff to never send passwords in clear
 * Better handling of SSL certificate
 * Various small bugfixes
 * Security fix in possible buffer overflow (pop3.c)
 * Security fix in pop3 (infinite uidl list would block gnubiff and
   ultimately crashes it)
 * Bugfix in geometry handling (was not saved properly)
 * Bugfix in pop3 protocol to really get only most recent headers
 * Bugfix in apop protocol which was really broken
 * Bugfix in imap4 to handle server panic
 * Bugfix in utf8 translation
 * Added hidden files in gtk_file_chooser's


Version 1.4.0
 * gnubiff now requires glib/gdk/gtk/libglade 2.4
 * Use of file chooser instead of file selector	
 * PNG simple animation support
 * Preview added when selecting images
 * Image/animation resizing with panel for GNOME version
 * Read mails are saved in configuration file
 * User can now choose text to be displayed when new mail and when no mail
 * Possibility to choose command to play sound
 * Possibility to choose popup background color (to make it flashy)
 * Possibility to hide image or/and text when no mail and when new mail